# Picmory-BE

./: .env.nginx  .gitignore  README.md  docker-compose.blue.yaml  docker-compose.green.yaml  docker-compose.nginx.yaml  docker-entrypoint.django.sh  dockerfile.api  dockerfile.crawler  pyproject.toml
apps/album/: admin.py  models.py  serializers.py  views.py
apps/album/migrations/: 0001_initial.py  0002_alter_album_table_alter_albummemory_table.py  0003_albummemory_updated_at.py  0004_remove_albummemory_updated_at_album_updated_at.py  0005_alter_album_options.py
apps/memory/: admin.py  models.py  serializers.py  views.py
apps/memory/migrations/: 0001_initial.py  0002_memory_is_liked_delete_memorylike.py  0003_alter_memory_table.py  0004_alter_memory_options.py
apps/upload/: admin.py  models.py  serializers.py  views.py
apps/upload/migrations/: 0001_initial.py  0002_alter_upload_file_alter_upload_memory.py  0003_alter_upload_options_alter_upload_table.py
apps/user/: admin.py  models.py  serializers.py  views.py
apps/user/migrations/: 0001_initial.py  0002_user_push_token.py  0003_alter_user_is_active.py  0004_alter_user_options_alter_user_table.py
config/: urls.py
config/settings/: settings.py
crawler/: docker-compose.yaml  dockerfile  package.json
crawler/nginx/: nginx.conf
crawler/src/: brands.js  server.js
nginx/conf/: api-blue.conf  api-green.conf  nginx.conf
