[tool.poetry]
name = "picmory-be"
version = "0.1.0"
description = ""
authors = ["Ksanbal <dev.ksanbal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
django = "4.2.13"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-unfold = "^0.27.0"
gunicorn = "^22.0.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
pylint-django = "^2.5.5"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
